5/27/2003
	- 1.3.3 released.

4/26/2003
	- The master file parser should accept BIND format TTLs.

4/10/2003
	- The Inet6Address class incorrectly parsed some addresses.
	  (reported by steve weiland <steve@widge.net>)

4/7/2003
	- Records were not sorted properly (reported by
	  Joseph K Shraibman <jks@akula.com>)

4/2/2003
	- Fix off-by-one error in Name.compareTo (David Blacka)

3/30/2003
	- Add the ZoneTransferIn class, which performs incoming AXFR/IXFR
	- Make TSIG verification of multiple-message responses reentrant.
	- Fix incorrect string quoting.
	- Make records print on a single line by default; add the 'multiline'
	  option to use the more verbose format.

3/17/2003
	- Make the routine that converts an IP address from a string
	  more efficient and correct.
	  (based on a patch by Sean O'Neil <SeanO@telemate.net>)

2/12/2003
	- Fix an infinite loop that could occur when processing a response
	  containing a CNAME loop and an rcode of NOERROR.
	  (reported by Sean O'Neil <SeanO@telemate.net>)

1/25/2003
	- Cleanup and improvements to the ExtendedResolver class.

1/23/2003
	- Add the setMaxCache() method to the Cache class.
	- Check for non-absolute names when creating Records.

1/21/2003
	- 1.3.2 released.

1/20/2003
	- Certain responses with CNAMEs weren't being properly cached.
	  (reported by Sean O'Neil <SeanO@telemate.net>)
	- Add a 'compile' target to build.xml, and make the 'all' target
	  both compile and build the jar file.
	  (Jon Scott Stevens <jon@latchkey.com>)

12/22/2002
	- Check for SecurityExceptions in the Options static initializer;
	  this was preventing the use of dnsjava in an unsigned applet.
	  (reported by Peter Westerink <peterw@us.ibm.com>).

12/15/2002
	- Converting some types of records (TXT, for example) to wire format
	  could throw an IndexOutOfBoundsException.
	- TSIG signed UDP queries weren't properly verified by jnamed.
	- Add a method to render a Message with a specified maximum size - 