@@ -1,3 +1,6 @@
+5/28/2003
+	- When constructing a record, check that all names are absolute.
+
 5/27/2003
 	- 1.3.3 released.
 
